--- a/force-app/main/default/lwc/employeePage/employeePage.css
+++ b/force-app/main/default/lwc/employeePage/employeePage.css
@@ -7,7 +7,9 @@
 .total{
     background: #d0d0c7;
 }
-/* 
-.slds-accordion__content{
-    width: 500px;
-} */
+.slds-modal__header{
+    background: #f3f2f2;
+}
+.slds-p-around_medium{
+    background: #f3f2f2;
+}
