add logout option

--- a/force-app/main/default/lwc/adminPage/adminPage.css
+++ b/force-app/main/default/lwc/adminPage/adminPage.css
@@ -2,3 +2,10 @@
     border-color: none;
     background-color: none;
 } */
+.slds-table_cell-buffer{
+    padding-left: none
+}
+
+.slds-table_cell-buffer tr>th:first-child, .slds-table_cell-buffer tr>td:first-child, .slds-table--cell-buffer tr>th:first-child, .slds-table--cell-buffer tr>td:first-child{
+    padding-left: none
+}
